--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "reddit-clone",
+  "name": "daodom",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@superfluid-finance/js-sdk": "^0.5.12",
     "@superfluid-finance/sdk-core": "^0.3.2",
+    "@web3auth/web3auth": "^0.9.3",
     "dayjs": "^1.10.7",
     "ethers": "^5.6.4",
     "firebase": "^9.1.3",
