--- a/package.json
+++ b/package.json
@@ -3,25 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
+    "@gnosis.pm/safe-core-sdk": "^0.3.1",
+    "@gnosis.pm/safe-service-client": "^0.1.0",
     "@superfluid-finance/js-sdk": "^0.5.12",
     "@superfluid-finance/sdk-core": "^0.3.2",
-    "@web3auth/web3auth": "^0.9.3",
+    "@walletconnect/web3-provider": "^1.5.0",
+    "antd": "4.16.0",
     "dayjs": "^1.10.7",
+    "eth-hooks": "^1.1.2",
     "ethers": "^5.6.4",
     "firebase": "^9.1.3",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
+    "react-blockies": "^1.4.1",
     "react-bootstrap": "^2.3.0",
+    "react-css-theme-switcher": "^0.2.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
     "react-hot-toast": "^2.1.1",
     "react-markdown": "^4.0.6",
     "react-query": "^3.27.0",
+    "react-qr-reader": "^2.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "remark-breaks": "^1.0.2",
     "styled-components": "^5.3.3",
     "validator": "^13.6.0",
+    "walletlink": "^2.1.5",
+    "web3modal": "^1.9.1",
     "zustand": "^3.5.13"
   },
   "scripts": {
