--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@gnosis.pm/safe-service-client": "^0.1.0",
     "@superfluid-finance/js-sdk": "^0.5.12",
     "@superfluid-finance/sdk-core": "^0.3.2",
+    "@toruslabs/torus-embed": "^1.24.2",
     "@walletconnect/web3-provider": "^1.5.0",
     "antd": "4.16.0",
     "dayjs": "^1.10.7",
@@ -23,8 +24,8 @@
     "react-hook-form": "^7.17.5",
     "react-hot-toast": "^2.1.1",
     "react-markdown": "^4.0.6",
-    "react-query": "^3.27.0",
     "react-qr-reader": "^2.2.1",
+    "react-query": "^3.27.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "remark-breaks": "^1.0.2",
