--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@superfluid-finance/sdk-core": "^0.3.2",
     "@walletconnect/web3-provider": "^1.5.0",
     "antd": "4.16.0",
+    "bnc-notify": "^1.9.5",
     "dayjs": "^1.10.7",
     "eth-hooks": "^1.1.2",
     "ethers": "^5.6.4",
     "firebase": "^9.1.3",
     "graphql": "^16.3.0",
+    "qrcode.react": "^3.0.2",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-bootstrap": "^2.3.0",
@@ -22,13 +24,14 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
     "react-hot-toast": "^2.1.1",
+    "react-is": "^16.13.1",
     "react-markdown": "^4.0.6",
-    "react-query": "^3.27.0",
     "react-qr-reader": "^2.2.1",
+    "react-query": "^3.27.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "remark-breaks": "^1.0.2",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.5",
     "validator": "^13.6.0",
     "walletlink": "^2.1.5",
     "web3modal": "^1.9.1",
