--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@livepeer/video-nft": "^0.3.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@snapshot-labs/snapshot.js": "^0.4.2",
     "@superfluid-finance/js-sdk": "^0.5.12",
     "@superfluid-finance/sdk-core": "^0.3.2",
     "@walletconnect/web3-provider": "^1.5.0",
