--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@gnosis.pm/safe-core-sdk": "^0.3.1",
@@ -11,6 +12,8 @@
     "@livepeer/video-nft": "^0.3.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
+    "@mui/x-date-pickers-pro": "^5.0.0-alpha.7",
     "@snapshot-labs/snapshot.js": "^0.4.2",
     "@superfluid-finance/js-sdk": "^0.5.12",
     "@superfluid-finance/sdk-core": "^0.3.2",
