--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@ethersproject/contracts": "^5.6.2",
     "@gnosis.pm/safe-core-sdk": "^0.3.1",
     "@gnosis.pm/safe-service-client": "^0.1.0",
     "@superfluid-finance/js-sdk": "^0.5.12",
     "@superfluid-finance/sdk-core": "^0.3.2",
+    "@uniswap/sdk": "^3.0.3",
     "@walletconnect/web3-provider": "^1.5.0",
     "antd": "4.16.0",
     "bnc-notify": "^1.9.5",
