--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@gnosis.pm/safe-core-sdk": "^0.3.1",
+    "@gnosis.pm/safe-ethers-adapters": "0.1.0-alpha.9",
     "@gnosis.pm/safe-service-client": "^0.1.0",
+    "@mui/material": "^5.8.6",
     "@superfluid-finance/js-sdk": "^0.5.12",
     "@superfluid-finance/sdk-core": "^0.3.2",
     "@walletconnect/web3-provider": "^1.5.0",
@@ -23,6 +27,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.5",
     "react-hot-toast": "^2.1.1",
+    "react-is": "^18.2.0",
     "react-markdown": "^4.0.6",
     "react-qr-reader": "^2.2.1",
     "react-query": "^3.27.0",
