--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@mui/material": "^5.8.6",
     "@superfluid-finance/js-sdk": "^0.5.12",
     "@superfluid-finance/sdk-core": "^0.3.2",
+    "@thirdweb-dev/react": "^2.4.8",
+    "@thirdweb-dev/sdk": "^2.3.24",
     "@walletconnect/web3-provider": "^1.5.0",
+    "@web-std/file": "^3.0.2",
     "antd": "4.16.0",
     "bignumber.js": "^9.0.1",
     "dayjs": "^1.10.7",
     "eth-hooks": "^1.1.2",
-    "ethers": "^5.6.4",
+    "ethers": "^5.6.9",
     "firebase": "^9.1.3",
     "graphql": "^16.3.0",
+    "moralis": "^1.8.1",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-bootstrap": "^2.3.0",
@@ -29,15 +33,18 @@
     "react-hot-toast": "^2.1.1",
     "react-is": "^18.2.0",
     "react-markdown": "^4.0.6",
+    "react-moralis": "^1.4.0",
     "react-qr-reader": "^2.2.1",
     "react-query": "^3.27.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-web3-provider": "^1.1.2",
     "remark-breaks": "^1.0.2",
     "styled-components": "^5.3.3",
     "validator": "^13.6.0",
     "walletlink": "^2.1.5",
     "web3modal": "^1.9.1",
+    "web3uikit": "^0.1.163",
     "zustand": "^3.5.13"
   },
   "scripts": {
