--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ethers": "^5.6.4",
     "firebase": "^9.1.3",
     "graphql": "^16.3.0",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-bootstrap": "^2.3.0",
