--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@gnosis.pm/safe-core-sdk": "^0.3.1",
+    "@gnosis.pm/safe-core-sdk-types": "^1.2.1",
     "@gnosis.pm/safe-ethers-adapters": "0.1.0-alpha.9",
+    "@gnosis.pm/safe-ethers-lib": "^1.2.1",
     "@gnosis.pm/safe-service-client": "^0.1.0",
     "@mui/material": "^5.8.6",
     "@superfluid-finance/js-sdk": "^0.5.12",
