--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eth-hooks": "^1.1.2",
     "ethers": "^5.6.4",
     "firebase": "^9.1.3",
-    "graphql": "^16.3.0",
+    "graphql": "^16.5.0",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-bootstrap": "^2.3.0",
@@ -30,6 +30,7 @@
     "react-scripts": "^4.0.3",
     "remark-breaks": "^1.0.2",
     "styled-components": "^5.3.3",
+    "urql": "^2.2.3",
     "validator": "^13.6.0",
     "walletlink": "^2.1.5",
     "web3modal": "^1.9.1",
